--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,10 +1,10 @@
+version: 2
 build:
   image: latest
-
 python:
-  version: 3.6
-
-requirements_file: doc/requirements.txt
-
+  version: 3
+  install:
+    - requirements: doc/requirements.txt
+  system_packages: true
 formats:
   - pdf
