--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           python -m sphinx -W --keep-going --color -d _build/doctrees/ doc/ _build/html/ -b html
       - name: Check links
         run: |
-          python -m sphinx -W --keep-going --color -d _build/doctrees/ doc/ _build/linkcheck/ -b linkcheck
+          python -m sphinx -W --keep-going --color -d _build/doctrees/ doc/ _build/linkcheck/ -b linkcheck -q
       - name: Upload linkcheck results
         uses: actions/upload-artifact@v4
         if: ${{ success() || failure() }}
